--- a/privacy.html
+++ b/privacy.html
@@ -92,15 +92,17 @@
         text-align: left;
         overflow: hidden;
         color: #666;
-        margin-left: auto;
-        margin-right: auto;
 
+
+    }
+    .big{
+        margin: 0 20%;
     }
     
     </style>
 </head>
 <body>
-
+    <div class="big">
     <span class="main-title">京东基本功能隐私政策</span>
     <small class="sub-title">PRIVACY POLICY</small>
     <div class="text-container">
@@ -154,6 +156,7 @@
             <p style="text-indent:2em;">常用办公地址：北京市经济技术开发区科创十一街18号</p>
         </div>
     </div>
+</div>
    
 
 </body>
